--- a/asset/css/allArticles.css
+++ b/asset/css/allArticles.css
@@ -1,9 +1,12 @@
 .modal {
   position: fixed;
-  top: 0; left: 0;
-  width: 100%; height: 100%;
+  inset: 0;
   background: rgba(0,0,0,0.5);
-  display: flex; align-items: center; justify-content: center;
+  display: none;
+  align-items: center; 
+  justify-content: center;
+
+  z-index: 1000;
 }
 .modal-content {
   background: #fff;
